--- a/mta.yaml
+++ b/mta.yaml
@@ -1,3 +1,21 @@
 _schema-version: '2.0'
 ID: xsaSynonymsClassic
 version: 0.0.1
+
+modules:
+ - name: db
+   type: hdb
+   path: db
+   requires:
+    - name: hdi-container
+      properties:
+        TARGET_CONTAINER: ~{hdi-container-name}
+    - name: mydata-grantor
+    
+resources:
+ - name: hdi-container
+   properties:
+      hdi-container-name: ${service-name}
+   type: com.sap.xs.hdi-container
+ - name: mydata-grantor
+   type: org.cloudfoundry.existing-service
